Enhance API and web application with new features and improvements
- Added linting and formatting scripts to package.json for better code quality.
- Integrated Prettier and ESLint as devDependencies for consistent code style.
- Implemented secret management functionality in the API to fetch sensitive data from AWS Secrets Manager and HashiCorp Vault.
- Introduced new V2 API endpoints for enhanced trading functionalities, including orderbook and market data retrieval.
- Updated database initialization to support V2 schema and added error handling for schema execution.
- Refactored the web application to utilize React Router for improved navigation and page structure.
- Enhanced settings modal to support language selection and improved user experience.
- Implemented secure API requests with CSRF protection in the web application.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
     "typecheck": "pnpm -r typecheck",
+    "lint": "pnpm -r --parallel lint",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "deploy:sepolia": "pnpm --filter @dbs/contracts deploy:sepolia"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
